# shibei-onchain-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
assets/: BRAND.md
config/: tokens.bsc.json
docs/: BACKTEST.md  BOARD_API.md  BUIDL_SUBMISSION.md  GOLIVE.md  INTERFACES.md  TESTNET.md
scripts/: verify_aster.py  verify_onchain.py
src/shibei_onchain/: __init__.py  backtest.py  cli.py  config.py  exec_live.py  models.py
src/shibei_onchain/brain/: __init__.py  planner.py  position_manager.py  risk.py  scanner.py
src/shibei_onchain/delivery/: __init__.py  feishu.py
src/shibei_onchain/onchain/: __init__.py  aster_adapter.py  aster_perp.py  execution_adapter.py  pancake_router.py  reconcile.py  twak_client.py  universe_filter.py
src/shibei_onchain/signals/: __init__.py  cmc_agent_hub.py  regime_gate.py  shibei_board.py
tests/: test_aster_adapter.py  test_aster_perp.py  test_backtest.py  test_cmc_agent_hub.py  test_config.py  test_exec_live.py  test_execution_adapter.py  test_feishu.py  test_pancake_router.py  test_planner.py  test_position_manager.py  test_reconcile.py  test_regime_gate.py  test_risk.py  test_scanner.py  test_shibei_board.py  test_twak_client.py  test_universe_filter.py
